My Offers redesign (#144)
* Category buttons

* wip: redesign, remove unused code

* Remove wallet actions

* wip: seperate my offers into active, proposed and deposited

* Styling for Active Offers

* Font size on offer tooltips

* Buttons

* Force page to be My Vault after depositing

* More btn styling

* Mobile styling for Active Loans subpage

* Mobile styling, My Vault

* wip: Active Offers Mobile styles

* wip: active offers buttons

* Removed hover tooltips because it's mobile anyway

* Actions buttons styling

* Fix for desktop

* Padding for desktop

* Border-radius var

* Text wrap on small screenss

* Fix

* Ugly solution to bring back deposit nft button on the My Vault subpage

* useCallback and other review changes

--- a/styles/_toasters.scss
+++ b/styles/_toasters.scss
@@ -17,7 +17,7 @@
   height: 10px;
   left: 6%;
   width: 88%;
-  border-radius: 50px;
+  border-radius: $brd-rds-xl;
 }
 
 .Toastify__progress-bar--success {
