--- a/styles/_switchButton.scss
+++ b/styles/_switchButton.scss
@@ -1,6 +1,6 @@
 .switch--button {
   display: inline-block;
-  border-radius: 50px;
+  border-radius: $brd-rds-xl;
   width: 60px;
   height: 26px;
   border: 1px solid;
