fix/responsive/conformation lightbox (#147)
* fix: lightbox width fixed

* fix: centered lightbox heading title

* Update _acceptOffer.scss

* fix: centered lightbox heating title

Co-authored-by: izyuk <iziuk.web@gmail.com>

--- a/styles/singleOffer/_acceptOffer.scss
+++ b/styles/singleOffer/_acceptOffer.scss
@@ -84,3 +84,12 @@
     margin: $tp-xl auto 0;
   }
 }
+
+@media (max-width: $bp-tablet) {
+  .accept-offer {
+    width: 100%;
+    h2 {
+      text-align: center;
+    }
+  }
+}
