Paginator now changes based on page count.  (#143)
* working on pagination

* Paginator Rework, Theme fix, mobile background fixes

* var spacing

* fixed most comments

* Fixed mobile style problems

* error fix

* error fix

* Wrong buttons being hidden

also removes the debug values

* Fix class conflict with top menu

Co-authored-by: praskoson <40672437+praskoson@users.noreply.github.com>

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -64,6 +64,9 @@ $themes: (
     icon-paginator-left: url("/icons/page-left-icon-light.svg"),
     icon-paginator-right: url("/icons/page-right-icon-light.svg"),
     pagination-color: white,
+    pagination-bgcolor: #d1c1f3,
+    pagination-active-color: white,
+    pagination-active-bgcolor: #2e13d2,
 
     bg-input-disabled: #ebe2ff,
 
@@ -203,7 +206,10 @@ $themes: (
     hover-option-bg: rgba(76, 44, 135, 0.4),
     icon-paginator-left: url("/icons/page-left-icon-dark.svg"),
     icon-paginator-right: url("/icons/page-right-icon-dark.svg"),
-    pagination-color: white,
+    pagination-color: #9e6cff,
+    pagination-bgcolor: #482688,
+    pagination-active-color: white,
+    pagination-active-bgcolor: #9e6cff,
 
     lightbox-collection-border: #e00a7f,
     lightbox-collection-color: #9e6cff,
