Reduce shadow on filter box

--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -136,7 +136,7 @@
     margin-bottom: 0;
     transform: scaleY(1);
     padding: 30px;
-    box-shadow: 0 9px 10px 0 rgba(19, 7, 43, 1);
+    box-shadow: 0 4px 4px rgb(33, 13, 72, 0.25);
   }
 
   .filter-generic {
