--- a/styles/mobile/_layoutTopMobile.scss
+++ b/styles/mobile/_layoutTopMobile.scss
@@ -1,12 +1,17 @@
 @media (max-width: $bp-phone) {
   .layout-top-mobile {
     position: fixed;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(7px);
-    border-radius: 0px 0px 8px 8px;
+    border-radius: 0 0 8px 8px;
     width: 100vw;
     top: 0;
+    bottom: 0;
     z-index: 2;
+
+    &.mobile-hide {
+      bottom: unset;
+    }
 
     &.hidden {
       top: -100%;
