--- a/styles/loansGiven/_myLendingList.scss
+++ b/styles/loansGiven/_myLendingList.scss
@@ -5,6 +5,11 @@
 
   h1 {
     margin: $mr-xl 0;
+
+    @media (max-width: $bp-phone) {
+      margin: $mr-2xl auto $mr-md;
+      text-align: center;
+    }
   }
 
   &__inner {
@@ -59,6 +64,18 @@
     width: 95%;
   }
 
+  @media (max-width: $bp-phone) {
+    flex-direction: column;
+    padding: $mr-2rem $mr-md;
+    gap: $mr-md;
+    border-radius: $brd-rds-md;
+
+    .loan__row:nth-child(2) {
+      flex-direction: column;
+      gap: $mr-2rem;
+    }
+  }
+
   .loan__row:first-child {
     margin-bottom: -$mr-sm;
   }
@@ -66,6 +83,7 @@
   .loan__row {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: $mr-md;
 
@@ -107,7 +125,7 @@
 
       &.header {
         flex-direction: row;
-        flex: 1 1 calc(70% - $mr-md/2);
+        flex: 1 1 calc(65% - $mr-md/2);
       }
     }
 
@@ -126,6 +144,10 @@
           font-weight: 700;
         }
       }
+      @media (max-width: $bp-phone) {
+        margin: 0 auto;
+        width: 90%;
+      }
     }
 
     button {
@@ -135,14 +157,18 @@
       justify-content: center;
     }
 
-    .claim-nft--button {
-      margin: 0 auto;
-      border: 0;
-    }
-
+    .claim-nft--button,
     .loan-not-repaid-button {
       margin: 0 auto;
       border: 0;
+      font-weight: $wg-hv;
+
+      @media (max-width: $bp-phone) {
+        width: 90%;
+      }
+    }
+
+    .loan-not-repaid-button {
       @include theme-aware("background", "myOffers-subOffer-info-bg");
       @include theme-aware("color", "timeLoanDisabled-color");
     }
@@ -213,6 +239,10 @@
     &.red {
       @include theme-aware("background", "timeLoan-red-btn");
     }
+
+    @media (max-width: $bp-phone) {
+      width: 75%;
+    }
   }
 
   &__mint,
@@ -239,7 +269,7 @@
 
 .loan-time {
   line-height: 16px;
-  flex: 1 1 calc(30% - $mr-md/2);
+  flex: 1 1 calc(35% - $mr-md/2);
 
   span {
     width: 100%;
