Only three loans per NFT and moved theme button to the Wallet dropdown (#150)
* User can't create more than three loan offers for each NFT nowa

* fix for vercel

* Center on mobile

* fixes

* fixes 2

* Remove placeholder div on non-mobile screens

Co-authored-by: praskoson <40672437+praskoson@users.noreply.github.com>

--- a/styles/_userToolbox.scss
+++ b/styles/_userToolbox.scss
@@ -6,6 +6,17 @@
     padding: 0 20px;
     justify-content: center;
   }
+
+  &__fake {
+    display: none;
+
+    @media (max-width: $bp-phone) {
+      display: block;
+      width: 32px;
+      height: 32px;
+      margin: 16px;
+    }
+  }
 }
 
 .theme-switcher {
