--- a/styles/_walletAdapter.scss
+++ b/styles/_walletAdapter.scss
@@ -143,6 +143,10 @@
   justify-content: center;
 }
 
+.wallet-adapter-dropdown-list-item.theme {
+  margin-bottom: 4px;
+}
+
 .wallet-adapter-modal-collapse-button svg {
   align-self: center;
   fill: #999;
