--- a/styles/mobile/offersPage/_offersTopMobile.scss
+++ b/styles/mobile/offersPage/_offersTopMobile.scss
@@ -6,11 +6,11 @@
 
   .offers-filters-wrapper {
     position: static;
-    margin-top: 100px;
+    margin-top: 10px;
     margin-bottom: -550px;
 
     &.active {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
   }
 
