--- a/styles/_showOnHover.scss
+++ b/styles/_showOnHover.scss
@@ -13,6 +13,7 @@
 
   &__label {
     overflow-wrap: anywhere;
+    font-weight: $wg-hv;
   }
 
   &__elements {
@@ -37,8 +38,6 @@
 @media (max-width: $bp-tablet) {
   .show-on-hover {
     border-radius: $brd-rds-sm;
-    -moz-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.75);
-    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.75);
     display: inline-block;
     opacity: 1;
   }
