--- a/styles/mobile/_layoutTopMobile.scss
+++ b/styles/mobile/_layoutTopMobile.scss
@@ -1,10 +1,10 @@
 @media (max-width: $bp-phone) {
   .layout-top-mobile {
-    position: fixed;
+    position: relative;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 0 0 8px 8px;
     width: 100vw;
-    top: 0;
+    height: 70px;
     z-index: 2;
 
     &.hidden {
@@ -65,6 +65,7 @@
     align-items: center;
     padding: 0 20px;
     margin: 0;
+    z-index: 1;
 
     .shadow-element {
       width: 50px;
