fix: mobile menu fixes

--- a/styles/_layoutTop.scss
+++ b/styles/_layoutTop.scss
@@ -67,8 +67,8 @@
     margin: 10px 2.5vw;
     justify-content: center;
 
-    li a {
-      height: auto;
+    li {
+      text-align: center;
       padding: 8px 15px 9px 15px;
     }
   }
