--- a/styles/_selects.scss
+++ b/styles/_selects.scss
@@ -1,14 +1,35 @@
+// Common styles for both types of selects
+.custom-select,
+.custom-multi-select {
+  position: relative;
+  display: inline-flex;
+  cursor: pointer;
+
+  &__options {
+    box-shadow: 0 4px 6px rgba(45, 26, 81, 0.3);
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    transition: all 0.1s ease-in-out;
+    margin-top: $mr-sm;
+
+    &.hidden {
+      visibility: hidden;
+      margin-top: 0;
+      opacity: 0;
+      z-index: 1;
+    }
+  }
+}
+
 .custom-select {
   @include theme-aware("background-color", "input-bg");
   @include theme-aware("color", "color-content");
 
-  transition: all 0.3s ease-in-out;
   padding: 0;
   width: 40%;
   border-radius: 2px;
-  position: relative;
-  display: inline-flex;
-  cursor: pointer;
 
   &__selected {
     width: 100%;
@@ -20,21 +41,9 @@
 
   ul.custom-select__options {
     @include theme-aware("background-color", "input-bg");
-
-    box-shadow: 0 4px 6px rgba(45, 26, 81, 0.3);
     width: 100%;
-    position: absolute;
-    margin-top: 40px;
-    transition: all 0.6s ease-in-out;
     border-radius: 18px;
     padding: $mr-tn $mr-sm;
-
-    &.hidden {
-      visibility: hidden;
-      margin-top: 0;
-      opacity: 0;
-      z-index: 1;
-    }
 
     li {
       cursor: pointer;
@@ -59,13 +68,8 @@
 .custom-multi-select {
   @include theme-aware("background-color", "bg-dropdown-multiple");
   @include theme-aware("color", "color-white");
-
-  transition: all 0.1s ease;
   padding: $mr-sm $mr-sm $mr-sm $mr-md;
   border-radius: $brd-rds-2tn;
-  position: relative;
-  display: inline-flex;
-  cursor: pointer;
 
   &__title {
     display: inline-flex;
@@ -139,23 +143,10 @@
   .custom-multi-select__options {
     @include theme-aware("background-color", "color-accent");
     box-shadow: 0 0 10px rgba(45, 26, 81, 0.9);
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    margin-top: $mr-tn;
-    transition: all 0.3s ease;
     border-radius: $brd-rds-1md;
     padding: 15px 32px;
     min-width: 300px;
     z-index: 2;
-
-    &.hidden {
-      visibility: hidden;
-      margin-top: 0;
-      opacity: 0;
-      z-index: 1;
-    }
 
     li {
       cursor: pointer;
