--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -78,6 +78,7 @@ $themes: (
     lightbox-range-bg: #8e1a59,
     lightbox-currency-color: #e0097e,
     lightbox-label-color: #210d48,
+    lightbox-loan-group-border-bottom: 1px solid #6743aa,
 
     icon-globe: url("/icons/globe-icon-light.svg"),
     icon-place: url("/icons/place-icon-light.svg"),
@@ -219,6 +220,7 @@ $themes: (
     lightbox-range-bg: #8e1a59,
     lightbox-currency-color: #e0097e,
     lightbox-label-color: #ffffff,
+    lightbox-loan-group-border-bottom: 1px solid #6743aa,
 
     icon-globe: url("/icons/globe-icon-dark.svg"),
     icon-place: url("/icons/place-icon-dark.svg"),
