--- a/styles/_lightboxBase.scss
+++ b/styles/_lightboxBase.scss
@@ -17,7 +17,7 @@
     @include theme-aware("background-color", "color-accent");
     border-radius: $brd-rds-lg;
     box-shadow: 0 0 24px 6px rgba(0, 0, 0, 0.25);
-    padding: 30px;
+    padding: $mr-lg;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -29,6 +29,8 @@
     @media (max-width: $bp-tablet) {
       width: 100%;
       height: 100%;
+      padding: 40px 40px 30px;
+      overflow-y: auto;
     }
 
     .lightbox__close {
