--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -25,7 +25,7 @@
         @include theme-aware("background-color", "color-accent");
       }
 
-      box-shadow: 0px 3px 0px rgba(33, 13, 72, 0.25);
+      box-shadow: 0 3px 0 rgba(33, 13, 72, 0.25);
     }
 
     &:hover {
@@ -124,7 +124,7 @@
   width: 100%;
   transform: scaleY(0);
   transition: transform 0.3s ease-in-out, padding 0.3s ease-in-out, margin 0.3s ease-in-out,
-    height 0.3s ease-in-out;
+    height 3s ease-in-out;
   @include theme-aware("background-color", "color-accent");
   padding: 0;
   height: auto;
