--- a/styles/myOffers/_myOffersNftList.scss
+++ b/styles/myOffers/_myOffersNftList.scss
@@ -122,7 +122,7 @@
       font-size: 20px;
       font-weight: 700;
 
-      &:first-child {
+      &.btn--primary {
         margin-left: 0;
         @include theme-aware("color", "lend-offer-button");
       }
