created light confirmation, confirmation button; refactored toast-popups

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -32,6 +32,9 @@ $themes: (
     info-green: #7fbe20,
     icon-eye: url("/icons/eye-icon-light.svg"),
     nft-pill-bg: #9480bf,
+    nft-headers-color: #9b75e3,
+    nft-headers-border: 1px solid #8676a6,
+    collateral-name: #210d48,
     input-bg: #ffffff,
     input-number-color: #210d48,
     input-number-button-bg: #e2d9f6,
@@ -177,6 +180,9 @@ $themes: (
     info-green: #7fbe20,
     icon-eye: url("/icons/eye-icon-dark.svg"),
     nft-pill-bg: #371c6b,
+    nft-headers-color: #8676a6,
+    nft-headers-border: 1px solid #9b75e3,
+    collateral-name: #fff,
     input-bg: #210d48,
     input-number-color: #ffffff,
     input-number-button-bg: #331c62,
