--- a/styles/main.scss
+++ b/styles/main.scss
@@ -43,6 +43,7 @@
 @import "./lightboxBase";
 @import "./NFTCollateral";
 @import "./createLoan";
+@import "./confirmLoan";
 @import "./connectWallet";
 @import "./loansGiven/myLendingList";
 @import "./singleOffer/lendConfirmation";
