--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -14,6 +14,7 @@ $tp-md: 14px;
 $tp-1md: 15px;
 $tp-2md: 16px;
 $tp-lg: 18px;
+$tp-1lg: 20px;
 $tp-2lg: 24px;
 $tp-xl: 36px;
 $tp-1xl: 48px;
@@ -33,6 +34,7 @@ $wg-sh: 900;
 
 // Styling
 $brd-rds-xl: 50px;
+$brd-rds-2lg: 40px;
 $brd-rds-lg: 24px;
 $brd-rds-2md: 20px;
 $brd-rds-1md: 18px;
