fixed mobile menu behavior on scroll

--- a/styles/mobile/_layoutTopMobile.scss
+++ b/styles/mobile/_layoutTopMobile.scss
@@ -19,7 +19,7 @@
     margin: 0;
     padding: 10px 0 10px 0;
     transition: top 0.25s ease;
-    position: absolute;
+    position: fixed;
     top: 70px;
     border-bottom-left-radius: $brd-rds-sm;
     border-bottom-right-radius: $brd-rds-sm;
