fixed lightbox functionality and markup

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -145,6 +145,7 @@ $themes: (
     circular-progress-line-bgcolor: #e0097e,
     circular-progress-emptyLine-bgcolor: #2f175d,
     circular-progress-color: #ffffff,
+    purple-light: #9e6cff,
   ),
   dark: (
     color-white: #fff,
@@ -292,5 +293,6 @@ $themes: (
     circular-progress-line-bgcolor: #e0097e,
     circular-progress-emptyLine-bgcolor: #2f175d,
     circular-progress-color: #ffffff,
+    purple-light: #9e6cff,
   ),
 );
