--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -55,7 +55,7 @@
     background-color: transparent;
     border: 2px solid;
     @include theme-aware("border-color", "color-primary");
-    @include theme-aware("background-color", "color-background");
+    //@include theme-aware("background-color", "color-background");
     @include theme-aware("color", "color-primary");
 
     &:hover {
