--- a/styles/_createLoan.scss
+++ b/styles/_createLoan.scss
@@ -6,7 +6,7 @@
 }
 
 .create-offer {
-  padding: 0 20px 24px;
+  max-width: 340px;
   @media (max-width: $bp-tablet) {
     padding: 0;
   }
@@ -26,6 +26,20 @@
     margin-bottom: 24px;
     justify-content: space-between;
 
+    &.form-amount,
+    &.form-duration {
+      column-gap: 16px;
+      div:nth-child(1) {
+        flex-grow: 2;
+      }
+      div:nth-child(2) {
+        flex-grow: 1;
+        .loan-currency {
+          width: 100%;
+        }
+      }
+    }
+
     & > div:nth-child(1),
     & > div:nth-child(2) {
       display: flex;
@@ -35,8 +49,6 @@
     div:nth-child(1) {
       display: flex;
       flex-direction: column;
-      width: 315px;
-      margin-right: 15px;
 
       @media (max-width: $bp-tablet) {
         width: 100%;
@@ -44,7 +56,7 @@
     }
 
     div:nth-child(2) {
-      width: 128px;
+      //width: 128px;
 
       @media (max-width: $bp-tablet) {
         width: 100%;
@@ -204,31 +216,17 @@
     }
   }
 
-  button {
-    @include theme-aware("background-color", "color-primary");
-    cursor: pointer;
-    padding: 15px;
-    text-align: center;
-    margin: 0;
+  .actions {
     display: flex;
-    align-items: center;
-    border: none;
-    border-radius: 6px;
-    transition: background 0.3s ease-in-out;
-
-    &:hover {
-      @include theme-aware("background-color", "color-primary-dark");
-    }
-
-    &.btn-content {
+    flex-direction: column;
+    row-gap: 18px;
+    button {
       width: 100%;
-      font-size: $tp-md;
-      line-height: 19px;
-      font-weight: 700;
-      padding: 10px 0;
-      text-align: center;
+      display: flex;
       justify-content: center;
-      @include theme-aware("color", "lend-offer-button");
+      border-radius: 5px;
+      padding: 0 15px;
+      font-weight: 700;
     }
   }
 
