--- a/styles/singleOffer/_acceptOffer.scss
+++ b/styles/singleOffer/_acceptOffer.scss
@@ -54,14 +54,27 @@
       display: flex;
       justify-content: space-around;
 
+      @media (max-width: $bp-phone) {
+        flex-direction: column;
+      }
+
       .data {
         display: flex;
         flex-direction: column;
         align-items: center;
 
+        @media (max-width: $bp-phone) {
+          &:not(:last-child) {
+            margin-bottom: 10px;
+          }
+        }
+
         p {
           font-size: $tp-sm;
           margin-bottom: 10px;
+          @media (max-width: $bp-phone) {
+            margin-bottom: 5px;
+          }
         }
 
         span {
