--- a/styles/_lightboxBase.scss
+++ b/styles/_lightboxBase.scss
@@ -1,9 +1,6 @@
 .lightbox {
   position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  inset: 0;
   width: 100%;
   //height: 100%;
   background-color: rgba(27, 18, 86, 0.8);
