fixed UI for loansGiven timer

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -107,15 +107,19 @@ $themes: (
     time-offer-green: linear-gradient(180deg, #80d3a1 0%, rgba(45, 19, 96, 0) 100%),
     time-offer-yellow: linear-gradient(180deg, #ed693c 0%, rgba(45, 19, 96, 0) 100%),
     time-offer-red: linear-gradient(180deg, #ff005c 0%, rgba(45, 19, 96, 0) 100%),
+    timeLoan-green-white: #fff,
     timeLoan-green: #2c9c59,
+    timeLoan-yellow-white: #fff,
     timeLoan-yellow: #eb683c,
     timeLoan-yellow-btn: rgba(174, 53, 12, 0.3),
+    timeLoan-red-white: #fff,
     timeLoan-red: #fe005b,
     timeLoan-red-btn: rgba(112, 0, 40, 0.25),
     timeLoan-offer-green: linear-gradient(180deg, #dad3ff 0%, #bce8ce 100%),
     timeLoan-offer-yellow: linear-gradient(180deg, #dad3ff 0.02%, #ffbba4 100%),
     timeLoan-offer-red: linear-gradient(180deg, #dad3ff 0%, #ff96bb 100%),
     timeLoanDisabled-color: #cdc5e4,
+    loan-time-divide: 1px solid #482688,
     myLoan-id-bg: #472ce2,
     myLoan-mint-bg: #7f70df,
     myLoan-header-color: #210d48,
@@ -254,15 +258,19 @@ $themes: (
     time-offer-green: linear-gradient(180deg, #166c38 0%, rgba(45, 19, 96, 0) 100%),
     time-offer-yellow: linear-gradient(180deg, #ed693c 0%, rgba(45, 19, 96, 0) 100%),
     time-offer-red: linear-gradient(180deg, #ff005c 0%, rgba(45, 19, 96, 0) 100%),
+    timeLoan-green-white: #00d756,
     timeLoan-green: #00d756,
+    timeLoan-yellow-white: #ea683c,
     timeLoan-yellow: #ea683c,
     timeLoan-yellow-btn: rgba(180, 49, 5, 0.25),
+    timeLoan-red-white: #fc005b,
     timeLoan-red: #fc005b,
     timeLoan-red-btn: rgba(112, 0, 40, 0.25),
     timeLoan-offer-green: linear-gradient(180deg, #442482 0%, #2c765b 100%),
     timeLoan-offer-yellow: linear-gradient(180deg, #442482 0%, #7e3a4b 100%),
     timeLoan-offer-red: linear-gradient(180deg, #442482 0%, #7e1b5f 100%),
     timeLoanDisabled-color: #5832a6,
+    loan-time-divide: 1px solid #482688,
     myLoan-id-bg: rgba(71, 44, 226, 0.7),
     myLoan-mint-bg: #532ba0,
     myLoan-header-color: #ffffff,
