lightbox css fixes for mobile (#167)
* lightbox fixes

* fix: remove unused styles, fix margin and image sizing

Co-authored-by: praskoson <40672437+praskoson@users.noreply.github.com>

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -55,6 +55,7 @@
 @import "./mobile/offersPage/offersTopMobile";
 @import "./mobile/offersPage/offersGridMobile";
 @import "./mobile/lightboxBaseMobile";
+@import "./mobile/acceptOfferMobile";
 
 body {
   @include theme-aware("background-color", "color-background");
