--- a/styles/_blobLoader.scss
+++ b/styles/_blobLoader.scss
@@ -137,3 +137,13 @@ $right: calc(330px - 50%);
     transform: scale(1, 0.9) translate(-50%, -50%);
   }
 }
+
+@media (max-width: $bp-phone) {
+  .blobs {
+    width: 200px;
+    height: 200px;
+  }
+  .lightbox-processing {
+    margin: auto;
+  }
+}
